# matrix-multiplication

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: functions.h
include/algorithms/: simple.h
include/utils/: types.h  utils.h
src/: functions.cpp
src/algorithms/: simple.cpp  simple.tpp
src/aux_py/: setup.py
src/utils/: utils.cpp  utils.tpp
